--- a/src/app.scss
+++ b/src/app.scss
@@ -5,8 +5,10 @@
   font-family: 'Baloo Bhaina 2', cursive;
   color:#58402c;
 }
+@import "variables";
+
 // variabili
-$border: 2px solid black;
+
 
 header {
   position: fixed;
@@ -24,7 +26,6 @@ header {
 .logo{
   width: 10%;
   height: 50%;
-  border:$border;
   img{
     width: 100%;
     height: 100%;
@@ -45,9 +46,22 @@ header {
       display: flex;
       justify-content: center;
       align-items: center;
+      &:nth-child(5){
+        @include button;
+
+        width: 80px;
+        height: 40px;
+        background: white;
+        border:1px solid #30488f;
+        color: #30488f;
+        img {
+          width:20px;
+        }
+      }
     }
   }
 }
+
 main {
   height: 100%;
 }
@@ -65,35 +79,6 @@ main {
   }
 
 }
-
-@mixin button{
-  width:180px;
-  height: 40px;
-  background: #30488f;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  color:white;
-  text-decoration: none;
-}
-@mixin sec-1-footer {
-  background: white;
-  height:600px;
-  width: 100%;
-  padding:50px 100px;
-}
-@mixin sec-2-3-8 {
-  background: #ffe7d2;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  padding:3% 25%;
-  text-align: center;
-
-}
-
 .content-ahref {
 
   width: 80%;
@@ -163,58 +148,118 @@ main {
         img {
           height: 60%;
           width: 100%;
-
         }
       }
     }
     }
-
-
 }
-// mixin testo sezione 4 5 6 7
-@mixin sec4-5-6-7{
-  background: white;
-  margin:50px 200px 50px 50px;
-  height: 700px;
-   > img {
-    width: 50%;
-    height: 100%;
-    background: red;
-  }
+
+#sec4,#sec6{
   .sec4-text{
-    width: 50%;
-    height: 100%;
-    h2{
-     font-size: 28px;
-     font-weight: 600;
-     margin-bottom: 5px;
-     }
-
-    h4{
-      font-size: 23px;
-      font-weight: 400;
-      margin-bottom: 10px;
-    }
-    a {
-      color:#30488F;
-      font-size: 23px;
-      text-decoration: none;
+    img{
+      margin-left: 50px;
     }
   }
 }
-
-#sec5 img,#sec7 img {
-  order:2;
+#sec5,#sec7{
+  .sec4-text{
+    margin-left: 14%;
+  }
+  img{
+    order: 2;
+  }
 }
 #sec4,#sec5,#sec6,#sec7{
+
   display: flex;
   @include sec4-5-6-7;
 }
 // mixin images 4 and 6
-@mixin sec4-6-img{
+#sec8 {
+  h1 {
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 32px;
+  }
+    > div:nth-child(2){
+    background: white;
+    border-radius: 5px;
+    border:1px solid grey;
+    text-align: left;
+    padding: 27px;
+    display: block;
+    height: auto;
+    > div {
+      display: flex;
+      width: 100%;
+      height: auto;
+      > div:nth-child(1) {
+        display: flex;
+        align-items: center;
+        img {
+          height: 40px;
+          width: auto;
+          &:nth-child(2){
+            margin: 0 10px;
+          }
+        }
+      }
+      > div:nth-child(2){
+        p:nth-child(1){
+          color:#30488f;
+        }
+
+      }
+    }
+  }
+  .sec8-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+    @include button;
+    margin-right: 15px;
+      + p + a{
+        margin-left: 15px;
+      }
+    }
+  }
+
 
 }
+
 footer{
-  background: black;
+ div {
+   width: 15%;
+ }
+  div > span {
+    font-size: 20px;
+        font-weight: 600;
+  }
+  li{
+    list-style-type: none;
+  }
+  padding:75px;
+  display: flex;
+  background: white;
   height: 500px;
+  div:first-child {
+    width: 30%;
+    display: flex;
+    justify-content:center;
+    align-items: flex-start;
+    line-height: 1;
+    img{
+      width: 50px;
+      margin-right: 20px;
+    }
+    span{
+      font-size: 20px;
+
+      p{
+        color:#30488f;
+      }
+    }
+  }
 }
