--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,61 @@
+// inizio mixin per gli header
+@mixin bothHeader{
+  position: fixed;
+  top:0;
+  padding:0 15%;
+  border-bottom: 1px solid grey;
+  height: 100px;
+  width: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  .logo{
+    width: 10%;
+    height: 50%;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .header-search{
+    width: 45%;
+    height: 50%;
+    ul{
+      display: flex;
+      justify-content: space-between;
+      height: 100%;
+      width: 100%;
+      list-style-type: none;
+      li{
+        width: 20%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &:first-child i{
+          margin:0 0 6px 6px;
+        }
+        &:nth-child(5){
+          @include button;
+
+          width: 80px;
+          height: 40px;
+          background: white;
+          border:1px solid #30488f;
+          color: #30488f;
+          img {
+            width:20px;
+          }
+        }
+      }
+    }
+  }
+
+}
+// fine mixin per gli header
+
 // inizio mixin testo sezione 4 5 6 7
 @mixin sec4-5-6-7{
   background: white;
